--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
   </div>
   <div class="row">
     <div id="img-area" class="col-md-7">
-      image display area
     </div>
     <div class="col-md-1">
     </div>
@@ -49,7 +48,7 @@
           <label for="new-topic">Add a Bug</label>
           <input type="text" class="form-control" name="" id="new-topic">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button id="add-topic-submit" type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
   </div>
