--- a/index.html
+++ b/index.html
@@ -38,18 +38,16 @@
     </div>
   </div>
   <div class="row">
-    <div id="img-area" class="col-md-7">
-    </div>
-    <div class="col-md-1">
-    </div>
-    <div class="col-md-4">
-      <form action="" method="post" role="form">
-        <div class="form-group">
-          <label for="new-topic">Add a Bug</label>
-          <input type="text" class="form-control" name="" id="new-topic">
-        </div>
+    <form class="form-inline col-lg-12 col-md-12 col-sm-12 col-xs-12" action="" method="post" role="form">
+      <div class="form-group">
+        <label for="new-topic"><h3>Add a Bug<h3</label>
+        <input type="text" class="form-control" name="" id="new-topic">
         <button id="add-topic-submit" type="submit" class="btn btn-primary">Submit</button>
-      </form>
+      </div>
+    </form>
+  </div>
+  <div class="row">
+    <div id="img-area" class="col-md-12">
     </div>
   </div>
 
